--- a/app/src/main/res/layout/rv_item_movie_review.xml
+++ b/app/src/main/res/layout/rv_item_movie_review.xml
@@ -82,21 +82,28 @@
         app:layout_constraintStart_toStartOf="@+id/iv_rv_movie_review_contents"
         app:layout_constraintTop_toBottomOf="@+id/iv_rv_movie_review_contents">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="@string/recommend"
-            android:textColor="@android:color/black" />
+        <LinearLayout
+            android:id="@+id/btn_rv_movie_review_recommend"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_rv_movie_review_recommend_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:text="0"
-            android:textColor="@android:color/black" />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="@string/recommend"
+                android:textColor="@android:color/black" />
+
+            <TextView
+                android:id="@+id/tv_rv_movie_review_recommend_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:text="0"
+                android:textColor="@android:color/black" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textView11"
